--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,6 @@ nav a:hover {
 }
 
 .weather-column {
-    position: relative;
     display: flex;
     flex-direction: column; /* Stapelt die Elemente vertikal */
     justify-content: center; /* Zentriert vertikal */
@@ -96,7 +95,6 @@ nav a:hover {
 #weatherIconContainer img {
     width: 160px;
     height: 160px;
-    margin: auto;
 }
 
 h1 {
@@ -131,18 +129,13 @@ h3 {
     display: block;
 }
 
-#citySelect::after {
-    content: "▼"; /* Ersetzt den Standardpfeil */
-    color: #ffffff;
-    padding-left: 10px;
-}
-
 #citySelect option {
     background-color: #444; /* Hintergrundfarbe für Optionen */
     color: #ffffff; /* Textfarbe der Optionen */
     padding: 5px;
 }
 
+/* Stil für den Empfehlungssatz */
 #Empfehlungssatz {
     padding: 2rem;
     text-align: center;
@@ -166,6 +159,7 @@ h3 {
     min-height: 580px; /* Mindesthöhe, passt sich bei Bedarf an */
 }
 
+/* Container für den Cocktail-Titel und das Rezept */
 #cocktailTitleContainer, #cocktailRecipeContainer {
     width: 30%; /* Breitere Container für Rezepte und Titel */
     padding: 20px;
@@ -173,20 +167,24 @@ h3 {
     margin-left: 62%;
 }
 
+/* Zusätzliche Stile für den Cocktail-Titel-Container */
 #cocktailTitleContainer {
     margin-top: 2rem;
 }
 
+/* Zusätzliche Stile für den Cocktail-Rezept-Container */
 #cocktailRecipeContainer {
     margin-bottom: 2rem;
 }
 
+/* Stil für den Cocktail-Titel */
 #cocktailTitle {
     font-size: 2em;
     font-weight: bold;
     color: lightgrey;
 }
 
+/* Stil für die Rezeptdetails */
 #recipeDetails {
     color: lightgray;
     font-family: "Baguette Script", cursive;
@@ -221,6 +219,7 @@ h3 {
     }
 }
 
+/* Animation für das Einblenden des Hintergrunds */
 .fade-in-background {
     animation: fadeInBackground 0.5s ease-in-out;
     opacity: 1;
@@ -235,6 +234,7 @@ h3 {
     }
 }
 
+/* Animation für das Einblenden des Textes */
 .fade-in {
     animation: fadeInText 1.5s ease-in-out;
     opacity: 1;
@@ -242,14 +242,19 @@ h3 {
 
 /* Tablet: max width = 768px */
 @media (max-width: 768px) {
-    #teamContainer, #weatherContainer, #Empfehlungssatz, #cocktailBlock {
-        width: 100%;
-    }
 
+    /* Box 1: Weather */
     #weatherContainer {
         flex-direction: column;
+        width: 90%;
     }
 
+    /* Box 2: Text (Empfehlungssatz) */
+    #Empfehlungssatz {
+        width: 90%;
+    }
+
+    /* Box 3: Cocktail */
     #cocktailTitleContainer, #cocktailRecipeContainer {
         width: 100%;
         margin-left: 0;
@@ -257,6 +262,7 @@ h3 {
 
     #cocktailBlock {
         min-height: auto; /* Entfernt die feste Höhe */
+        width: 90%;
     }
 
     #changeCocktail {
@@ -273,7 +279,6 @@ h3 {
     }
 
     nav {
-        display: flex;
         flex-direction: row; /* Nebeneinander anordnen */
         justify-content: center; /* Zentriert die Elemente im Header */
         padding: 10px 0;
@@ -291,7 +296,6 @@ h3 {
 
     /* Box 1: Weather */
     #weatherContainer {
-        display: flex;
         flex-direction: column;
         align-items: center;
         width: 90%;
@@ -322,7 +326,6 @@ h3 {
 
     /* Box 2: Text (Empfehlungssatz) */
     #Empfehlungssatz {
-        text-align: center;
         padding: 20px;
         width: 90%;
         margin: 20px auto;
@@ -330,10 +333,8 @@ h3 {
 
     /* Box 3: Cocktail */
     #cocktailBlock {
-        display: flex;
         flex-direction: column;
         align-items: center;
-        text-align: center;
         width: 90%;
         min-height: auto; /* Entfernt die feste Höhe */
         margin-top: 0;
@@ -342,7 +343,6 @@ h3 {
     #cocktailTitleContainer {
         width: 100%;
         margin-bottom: 10px;
-        text-align: center;
     }
 
     #cocktailImage {
@@ -354,13 +354,11 @@ h3 {
     #cocktailRecipeContainer {
         width: 100%;
         margin-bottom: 10px;
-        text-align: center;
     }
 
     #changeCocktail {
         width: 100%;
         margin-bottom: 10px;
-        text-align: center;
         position: relative;
         left: 50%;
         transform: translateX(-50%);
