--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,17 @@ h3 {
     opacity: 1;
 }
 
+
+
+
+
+
+
+
+
+
+
+
 /* Tablet: max width = 768px */
 @media (max-width: 768px) {
 
@@ -275,6 +286,17 @@ h3 {
     }
 }
 
+
+
+
+
+
+
+
+
+
+
+
 /* Mobile: max width = 576px */
 @media (max-width: 576px) {
     body {
@@ -304,6 +326,7 @@ h3 {
         flex-direction: column;
         align-items: center;
         width: 90%;
+        margin: 20px auto; /* Zentriert den Container und fügt Abstand hinzu */
     }
 
     #weatherIconContainer {
